--- a/index.html
+++ b/index.html
@@ -4,9 +4,133 @@
 </head>
 <body>
     <h1> MY WEB PAGE </h1>
-    <h1> This is my first Web page </h1> </body><!--block-->
-    <a href='#'>click here</a><br><!--Inline-->
+    <h1> This is my first Web page </h1> <!--block-->
+    <a href="https://www.google.com">click here</a><br><!--Inline-->
+    <a href="https://www.google.com" Target = "_blank">click here NEXT tab</a><br>
     <a href ='#'>Another link </a>
     <abbr title ="WORLD WIDE WEBSITE"> WWW</abbr></br>
+
+    <pre>
+
+        This is pre formated Text
+    </pre>
+
+    <br>
+    <br>
+
+    <table border ='6'>
+        <caption>Personal Information</caption>
+        <thead></thead>
+        <tr>
+            <th colspan ="2">Name</th>
+            <th>city</th>
+            <th>Country</th>
+        </tr>
+        </thead>
+    <tbody>
+        <tr>
+            <td>Ankita</td>
+            <td>Dixit</td>
+            <td>Hartland</td>
+            <td>USA</td>
+        </tr>
+        <tr>
+            <td>aaa</td>
+            <td>srsf</td>
+            <td>sfs</td>
+            <td>hasa</td>
+        </tr>
+    </tbody>
+    </table>
+
+    <br>
+    <br>
+
+    <table border ='6'>
+    <caption>Life Expectency by Current Age</caption>
+        <thead></thead>
+        <tr>
+            <th colspan ="2">65</th>
+            <th colspan ="2">40</th>
+            <th colspan ="2">20</th>
+        </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>male</td>
+                <td>female</td>
+                <td>male</td>
+                <td>female</td>
+                <td>male</td>
+                <td>female</td>
+            </tr>
+            <tr>
+                <td>82</td>
+                <td>85</td>
+                <td>78</td>
+                <td>82</td>
+                <td>77</td>
+                <td>81</td>
+            </tr>
+        </tbody>
+    
+    </table>
+
+    <br>
+    <br>
+   
+<table border ="6">
+<caption>Favorite and Least Favorite Things</caption>
+    <thead></thead>
+        <tr>
+            <th></th>
+            <th></th>
+            <th>Bob</th>
+            <th>Alice</th>
+        </tr>
+       <tr>
+            <th rowspan ="2">Favourite</th>
+                <th>color</th>
+                <td>blue</td>
+                <td>purple</td>
+       </tr>
+       <tr>
+            <th>flavor</th>
+            <td>banana</td>
+            <td>Chocolate</td>
+       </tr>
+
+       <tr>
+        <th rowspan ="2">Least</th>
+            <th>color</th>
+                <td>yellow</td>
+                <td>pink</td>
+   </tr>
+   <tr>
+        <th>flavor</th>
+            <td>Mint</td>
+            <td>Walnut</td>
+   </tr>
+</table>
+        <hr> <!-- Unpaired  Tag-->
+        <ol type ="A"> <!--Order List-->
+            <li>Scocer</li>
+            <li>table Tennis</li>
+        </ol>
+        <hr>
+        <ul type ="Circle"> <!--UNOrder List-->
+            <li>Scocer</li>
+            <li>table Tennis</li>
+        </ul>
+
+        <hr>
+        <dl> <!--Description List-->
+            <dt>Tennis</dt>
+            <dd> can pe played on ground</dd>
+        </dl>
+
+
+
     </body>
+
 </html>
