Adding changes to Index file

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
         <hr>
         <dl> <!--Description List-->
-            <dt>Tennis</dt>
+            <dt>Baseball</dt>
             <dd> can pe played on ground</dd>
         </dl>
 
