Changes on Assignment Page

--- a/Assignment2.html
+++ b/Assignment2.html
@@ -11,7 +11,7 @@
         With One Assignment Completion , score a free Large MARS Pizza .* Plus, with MARS Rewards, you’ll earn points to redeem for free food on every eligible order.  </p>
     
   
-    <form action="index.html" method ="post">
+    <form action="Menu&Order.html" method ="post">
         <fieldset>
             <legend>Login</legend>
     <table>
@@ -26,7 +26,7 @@
     </tr>
     </table>
     <br>
-    <input type ="Submit" Value="Sign In" />  <a href="password.html">Forget your Password?</a><br>
+    <input type ="Submit" Value="Login" /><br>
     </fieldset>         
 
     </form>
