--- a/JavaScript/JS-Day2-Assignment.html
+++ b/JavaScript/JS-Day2-Assignment.html
@@ -22,6 +22,7 @@
     margin-top: 20px;
     margin-bottom: 20px;
     padding-top: 60px;
+
     
 }
 
@@ -33,12 +34,12 @@
         
         <legend><h2>Guess The Number</h2></legend>
         <p>Select a number between 0-10</p>
-        <label for="guessField"><b>Enter a number:</b></label>
-        <input type="text" id="guessField">
+        <label for="guessField" class ="top"><b>Enter a number:</b></label>
+        <input type="text" id="guessField" class="top">
         <button onclick="guessnum()"> Submit</button><br>
         </div>
     </div>
-    <script type="text/javascript">
+<script type="text/javascript">
         let y = 4;
         let guess = 1;
         function guessnum() {
@@ -55,5 +56,6 @@
         }
 
 
-    </script></body>
+</script>
+</body>
 </html>
