--- a/JavaScript/JS-Day5-Assignment.html
+++ b/JavaScript/JS-Day5-Assignment.html
@@ -129,7 +129,7 @@ select{
 }
 
 </style>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Font+Name">
+
 <title>Document</title>
 </head>
 
@@ -214,7 +214,7 @@ select{
             </div> <!--Address input & country-->
         </div>
         <div class="form-footer">
-            <button class="btn" onclick="empDetails()"><h3>Submit</h3></button>
+            <button class="btn" onclick="validateEmployee()"><h3>Submit</h3></button>
         </div>
         </form>    
     </section>
