--- a/JavaScript/JS-Day6-Assignment.html
+++ b/JavaScript/JS-Day6-Assignment.html
@@ -170,8 +170,8 @@ select{
                     <input type="number" id ="workhrs" placeholder="Worked hours">
                 </div>
                 <div class="input-group">
-                    <label for ="designation" id="design"> Designation</label>
-                    <select>
+                    <label for ="designation" > Designation</label>
+                    <select id="design">
                         <option value="Manager">Manager</option>
                         <option value="Contractor">Contractor</option>
                         <option value="Trainee">Trainee</option>
