--- a/JavaScript/CURD/index.html
+++ b/JavaScript/CURD/index.html
@@ -35,7 +35,7 @@
                             id="bookIsComplete">
                             <br>
                             <br>
-                            <button class="btn btn-sm btn-primary" onclick="showAll()">Save</button>
+                            <button class="btn btn-sm btn-primary" onclick="save()">Save</button>
                             <button class="btn btn-sm btn-primary">Reset</button>
                         </form>
                     </div>
