--- a/JavaScript/JS-Day6-Assignment-Result.html
+++ b/JavaScript/JS-Day6-Assignment-Result.html
@@ -1,11 +1,19 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script
+    src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+    crossorigin="anonymous"></script>
+    
+    <link rel ="stylesheet" href="./test.css">
+    <link rel="icon" href="../favicon.ico">
+    <title>User Details</title>
 </head>
 <body>
+    <h1 >User Hourly Salary Details</h1>
     <div id="div1"></div>
     <script src="JS-Day6-Assignment-Result.js"></script>
 </body>
