--- a/JavaScript/CURD/index.html
+++ b/JavaScript/CURD/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-4">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -9,83 +9,90 @@
 </head>
 <body>
     <div class="container">
-     
         <div class="row">
-            <div class ="col-lg-12">
-                <h1 class ="alert text-center alert-primary">BOOKSHELF APP</h1>
+            <div class="col-lg-12">
+                <h1 class="alert text-center alert-primary">BookShelf App</h1>
             </div>
-            <div class ="col-lg-4">
-                <div class ="card">
-                    <div class ="card-body">
-                        <form id ="form">
-                            <label for ="bookTitle">Title</label>
-                            <input type ="text" placeholder="Title"
-                            class="form-control" id="bookTitle" required>
+            <div class="col-lg-4">
+                <div class="card">
+                    <div class="card-body">
+                        <form id="form">
+                            <input type="hidden" name = "id" id="bookId">
+                            <label for="bookTitle">Title</label>
+                            <input type="text" placeholder="Title"
+                            class = "form-control" id="bookTitle" required>
                             <br>
-                            <label for ="bookAuthor">Author</label>
-                            <input type ="text" placeholder="Author"
-                            id="bookAuthor"  class ="form-control" required>
+                            <label for="bookAuthor">Author</label>
+                            <input type="text" placeholder="Author"
+                            class = "form-control" id="bookAuthor" required>
                             <br>
-                            <label for ="bookYear">Year</label>
-                            <input type ="number" placeholder="yyyy"
-                            id="bookYear"  class ="form-control" required>
+                            <label for="bookYear">Year</label>
+                            <input type="number" placeholder="YYYY"
+                            class = "form-control" id="bookYear" required>
                             <br>
-                            <label for ="bookIsComplete">Finished Reading</label>
-                            <input type ="checkbox"
-                            id="bookIsComplete">
+                            <label for="bookIsComplete">Finished Reading</label>
+                            <input type="checkbox" 
+                            id="bookIsComplete" >
                             <br>
                             <br>
-                            <button class="btn btn-sm btn-primary" onclick="save()">Save</button>
-                            <button class="btn btn-sm btn-primary">Reset</button>
+                            <button class ="btn btn-sm btn-primary" onclick="save()">Save</button>
+                            <button class ="btn btn-sm btn-primary">Reset</button>
+
                         </form>
                     </div>
                 </div>
-            </div>
-            <div class ="col-lg-8">
+
+            </div> 
+            <div class="col-lg-8">
                 <div class="card">
-                    <div class ="card-body" >
+                    <div class="card-body">
                         <h3>Unread</h3>
                         <div>
-                            <table id ="datatable1" class="table table-striped">
-                                    <thead>
-                                        <tr>
-                                            <th>No</th>
-                                            <th>Title</th>
-                                            <th>Author</th>
-                                            <th>Year</th>
-                                            <th>Read</th>
-                                            <th>Edit</th>
-                                            <th>Delete</th>
-                                        </tr>
-                                    </thead>
-                                <tbody id ="table1"> 
+                            <table id="datatable1" class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>No</th>
+                                        <th>Title</th>
+                                        <th>Author</th>
+                                        <th>Year</th>
+                                        <th>Read</th>
+                                        <th>Edit</th>
+                                        <th>Delete</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="table1">
+
                                 </tbody>
                             </table>
                         </div>
                         <hr>
                         <h3>Read</h3>
                         <div>
-                            <table id ="datatable2" class="table table-striped">
-                                    <thead>
-                                        <tr>
-                                            <th>No</th>
-                                            <th>Title</th>
-                                            <th>Author</th>
-                                            <th>Year</th>
-                                            <th>Unread</th>
-                                            <th>Edit</th>
-                                            <th>Delete</th>
-                                        </tr>
-                                    </thead>
-                                <tbody id ="table2"> 
-                                </tbody> 
+                            <table id="datatable2" class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>No</th>
+                                        <th>Title</th>
+                                        <th>Author</th>
+                                        <th>Year</th>
+                                        <th>Unread</th>
+                                        <th>Edit</th>
+                                        <th>Delete</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="table2">
+
+                                </tbody>
                             </table>
                         </div>
-                    </div> 
-                </div> 
-            </div>
+                    </div>
+                </div>
+
+            </div>   
         </div>
+
     </div>
     <script src="main.js"></script>
+    
 </body>
 </html>
